[gd_scene load_steps=10 format=3 uid="uid://butts5geqiee5"]

[ext_resource type="Script" path="res://src/game/enemies/enemy.gd" id="1_1hpwl"]
[ext_resource type="PackedScene" uid="uid://jl3lbb3ikuhm" path="res://src/game/pickups/money/money.tscn" id="2_cjfdy"]
[ext_resource type="Script" path="res://src/game/components/hurt_box_component.gd" id="3_54b25"]
[ext_resource type="Script" path="res://src/game/components/hitbox_component.gd" id="4_hqphb"]
[ext_resource type="Script" path="res://src/game/components/health_bar_component.gd" id="5_cqd0b"]
[ext_resource type="Script" path="res://src/game/components/hurt_component.gd" id="5_f0sbc"]
[ext_resource type="AudioStream" uid="uid://bxikvxoe3q136" path="res://assets/sound/hit_monster.wav" id="6_hvyip"]
[ext_resource type="Script" path="res://src/game/components/spawn_invincibilitiy_component.gd" id="7_x1hsm"]
[ext_resource type="Script" path="res://src/game/components/spawner_component.gd" id="8_q5w0d"]

[node name="Enemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_1hpwl")
money = ExtResource("2_cjfdy")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_hqphb")
check_interval = 0.3

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_54b25")

[node name="HealthBarComponent" type="ProgressBar" parent="."]
offset_left = -15.0
offset_top = 18.0
offset_right = 89.0
offset_bottom = 45.0
scale = Vector2(0.3, 0.3)
value = 100.0
show_percentage = false
script = ExtResource("5_cqd0b")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("player_sfx", "hurtbox_component", "sprite", "actor")]
script = ExtResource("5_f0sbc")
hit_player_sfx = ExtResource("6_hvyip")
player_sfx = NodePath("../EnemySfx")
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite")
actor = NodePath("..")

[node name="SpawnInvicibilityComponent" type="Node" parent="." node_paths=PackedStringArray("hurtbox_component", "hitbox_component")]
script = ExtResource("7_x1hsm")
hurtbox_component = NodePath("../HurtboxComponent")
hitbox_component = NodePath("../HitboxComponent")
spawn_duration = 2.0

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("8_q5w0d")

[node name="EnemySfx" type="AudioStreamPlayer" parent="."]
